# Parallel-programming

DescoverOmpSchedule/: CMakeLists.txt  generator.h  main.c
MpiMatrixMultiply/: CMakeLists.txt  generator.h  main.c
MpiSleSolver/: splitgenerator.h
PragmaForV/: generator.h  main.c
PragmaParallelV/: main  main.c
